--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                Justin Yu<sup>1*</sup></span>,
+                Justin Yu<sup>*1</sup></span>,
               <span class="author-block">
-                Nidhya Shivakumar<sup>1*</sup></span>,
+                Nidhya Shivakumar<sup>*1</sup></span>,
               <span class="author-block">
-                Veena Sumedh<sup>1*</sup></span>,
+                Veena Sumedh<sup>*1</sup></span>,
               <span class="author-block">
                 Josh Zhang<sup>1</sup></span>,
               <span class="author-block">
@@ -137,7 +137,7 @@
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            Accurate state estimation of deformable cables is crucial in robotic perception, with significant applications in industrial automation and surgical robotics. However, resolving the state of multiple cluttered and tangled cable configurations poses challenges due to occlusions, overlapping cables, and ambiguous crossings. We introduce HANDLOOM 3.0, which combines bidirectional cable tracing with novel interactive perception primitives—Divergence Push and Cluster Dilation—to actively resolve ambiguities caused by occlusions, crossings, and dense cable arrangements. HANDLOOM 3.0 selects intervention primitives based on uncertainty in state estimates. Extensive evaluations on physical scenarios suggest that HANDLOOM 3.0 achieves on average 25.9\% improvement in the percentage of cable correctly traced over prior methods.
+            Accurate state estimation of deformable cables is crucial in robotic perception, with significant applications in industrial automation and surgical robotics. However, resolving the state of multiple cluttered and tangled cable configurations poses challenges due to occlusions, overlapping cables, and ambiguous crossings. We introduce HANDLOOM 3.0, which combines bidirectional cable tracing with novel interactive perception primitives—Divergence Push and Cluster Dilation—to actively resolve ambiguities caused by occlusions, crossings, and dense cable arrangements. HANDLOOM 3.0 selects intervention primitives based on uncertainty in state estimates. Extensive evaluations on physical scenarios suggest that HANDLOOM 3.0 achieves on average 25.9% improvement in the percentage of cable correctly traced over prior methods.
           </p>
         </div>
       </div>
