--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <div class="publication-links">
                          <!-- Arxiv PDF link -->
                       <span class="link-block">
-                        <a target="_blank"
+                        <a href = https://drive.google.com/file/d/1HmixPExFf7tbrZq4GSfDgAjsPRoBdS14/view?usp=sharing target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
