--- a/index.html
+++ b/index.html
@@ -110,6 +110,13 @@
   </div>
 </section>
 
+<section>
+  <div style="display: flex; justify-content: center; align-items: center; gap: 2em; margin-top: 0.1em; margin-bottom: 0.5em; flex-wrap: wrap;">
+    <img src="static/images/autolab.png" alt="Image 1" style="width: 20%; height:auto;">
+    <img src="static/images/bair.png" alt="Image 2" style="width: 15%; height:auto; margin-top: -30px;">
+    <img src="static/images/berkeley.png" alt="Image 3" style="width: 20%; height:auto;">
+  </div>
+</section>
 
 <!-- Teaser video-->
 <!-- <section class="hero teaser">
