video and pipeline

--- a/index.html
+++ b/index.html
@@ -119,21 +119,20 @@
 </section>
 
 <!-- Teaser video-->
-<!-- <section class="hero teaser">
-  <div class="container is-max-desktop">
+<section class="section hero is-light">
+  <div class="container is-max-desktop" style="margin-top: -5em; margin-bottom:-8em">
     <div class="hero-body">
-      <video poster="" id="tree" autoplay controls muted loop height="100%"> -->
+      <video poster="" id="tree" autoplay controls muted loop height="100%">
         <!-- Your video here -->
-         <!-- 
-        <source src="static/videos/banner_video.mp4"
+        <source src="static/videos/smaller_icra_workshop_submission.mp4"
         type="video/mp4">
       </video>
-      <h2 class="subtitle has-text-centered">
-        Tight insertion of an object into a socket with a robotic arm and a three-finger compliant hand without hand proprioception. Two sensing modalities are used: vision provides a rough estimate of the object-socket poses and tactile sensors on the fingers deliver implicit contact information.
-      </h2>
+      <!-- <h2 class="subtitle has-text-centered">
+        video
+      </h2> -->
     </div>
   </div>
-</section> -->
+</section>
 <!-- End teaser video -->
 
 <!-- Paper abstract -->
@@ -141,7 +140,7 @@
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Abstract</h2>
+        <h2 class="title is-3">Overview</h2>
         <div class="content has-text-justified">
           <p>
             Accurate state estimation of deformable cables is crucial in robotic perception, with significant applications in industrial automation and surgical robotics. However, resolving the state of multiple cluttered and tangled cable configurations poses challenges due to occlusions, overlapping cables, and ambiguous crossings. We introduce HANDLOOM 3.0, which combines bidirectional cable tracing with novel interactive perception primitives—Divergence Push and Cluster Dilation—to actively resolve ambiguities caused by occlusions, crossings, and dense cable arrangements. HANDLOOM 3.0 selects intervention primitives based on uncertainty in state estimates. Extensive evaluations on physical scenarios suggest that HANDLOOM 3.0 achieves on average 25.9% improvement in the percentage of cables correctly traced over prior methods.
@@ -152,6 +151,18 @@
   </div>
 </section>
 <!-- End paper abstract -->
+
+<section class="section hero is-light">
+  <div class="container is-max-desktop" style="margin-top: -2em; margin-bottom:-1em">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h5 class="title is-4">HANDLOOM 3.0 Framework</h5>
+      </div>
+    </div>
+    <img src="static/images/pipeline.png" alt="Methods Pipeline">
+  </div>
+</section>
+
 
 <!-- End teaser video -->
 
