--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8">
   <!-- Meta tags for social media banners, these should be filled in appropriatly as they are your "business card" -->
   <!-- Replace the content tag with appropriate information -->
-  <meta name="description" content="HANDLOOM 3.0">
-  <meta property="og:title" content="HANDLOOM 3.0"/>
+  <meta name="description" content="BIT">
+  <meta property="og:title" content="BIT"/>
   <meta property="og:description" content="Interactive Bi-Directional Cable Tracing Amid Clutter"/>
-  <meta property="og:url" content="nidhya-s.github.io"/>
+  <meta property="og:url" content="berkeleyautomation.github.io"/>
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X630-->
   <meta property="og:image" content="static/images/banner_image.png" />
   <meta property="og:image:width" content="1200"/>
