--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-  <title>HANDLOOM 3.0: Interactive Bi-Directional Cable Tracing Amid Clutter</title>
+  <title>BIT: Interactive Bi-Directional Cable Tracing Amid Clutter</title>
   <link rel="icon" type="image/x-icon" href="static/images/banner_image.png">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
@@ -52,30 +52,30 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">HANDLOOM 3.0: Interactive Bi-Directional Cable Tracing Amid Clutter</h1>
+            <h1 class="title is-1 publication-title">BIT: Interactive Bi-Directional Cable Tracing Amid Clutter</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
-              <span class="author-block">
-                Justin Yu<sup>*1</sup></span>,
-              <span class="author-block">
-                Nidhya Shivakumar<sup>*1</sup></span>,
-              <span class="author-block">
-                Veena Sumedh<sup>*1</sup></span>,
-              <span class="author-block">
-                Josh Zhang<sup>1</sup></span>,
-              <span class="author-block">
-                Ethan Ransing<sup>1</sup></span>,
-              <span class="author-block">
-                Osher Azulay<sup>1</sup>,
-                </span
-                 <span class="author-block">
-                    Ken Goldberg<sup>1</sup>
-                  </span>
-                  </div>
+              <!-- <span class="author-block"> -->
+                <!-- Justin Yu<sup>*1</sup></span>, -->
+              <!-- <span class="author-block"> -->
+                <!-- Nidhya Shivakumar<sup>*1</sup></span>, -->
+              <!-- <span class="author-block"> -->
+                <!-- Veena Sumedh<sup>*1</sup></span>, -->
+              <!-- <span class="author-block"> -->
+                <!-- Josh Zhang<sup>1</sup></span>, -->
+              <!-- <span class="author-block"> -->
+                <!-- Ethan Ransing<sup>1</sup></span>, -->
+              <!-- <span class="author-block"> -->
+                <!-- Osher Azulay<sup>1</sup>, -->
+                <!-- </span -->
+                 <!-- <span class="author-block"> -->
+                    <!-- Ken Goldberg<sup>1</sup> -->
+                  <!-- </span> -->
+                  <!-- </div> -->
 
-                  <div class="is-size-5 publication-authors">
-                    <span class="author-block">AUTOLab at the University of California, Berkeley<sup>1</sup></span>
-                  </div>
+                  <!-- <div class="is-size-5 publication-authors"> -->
+                    <!-- <span class="author-block">AUTOLab at the University of California, Berkeley<sup>1</sup></span> -->
+                  <!-- </div> -->
 
                   <div class="column has-text-centered">
                     <div class="publication-links">
@@ -110,13 +110,13 @@
   </div>
 </section>
 
-<section>
+<!-- <section>
   <div style="display: flex; justify-content: center; align-items: center; gap: 2em; margin-top: 0.1em; margin-bottom: 0.5em; flex-wrap: wrap;">
     <img src="static/images/autolab.png" alt="Image 1" style="width: 20%; height:auto;">
     <img src="static/images/bair.png" alt="Image 2" style="width: 15%; height:auto; margin-top: -30px;">
     <img src="static/images/berkeley.png" alt="Image 3" style="width: 20%; height:auto;">
   </div>
-</section>
+</section> -->
 
 <!-- Teaser video-->
 <section class="section hero is-light">
