--- a/index.html
+++ b/index.html
@@ -119,20 +119,20 @@
 </section> -->
 
 <!-- Teaser video-->
-<section class="section hero is-light">
+<!-- <section class="section hero is-light">
   <div class="container is-max-desktop" style="margin-top: -5em; margin-bottom:-8em">
     <div class="hero-body">
-      <video poster="" id="tree" autoplay controls muted loop height="100%">
+      <video poster="" id="tree" autoplay controls muted loop height="100%"> -->
         <!-- Your video here -->
-        <source src="static/videos/smaller_icra_workshop_submission.mp4"
+        <!-- <source src="static/videos/smaller_icra_workshop_submission.mp4"
         type="video/mp4">
-      </video>
+      </video> -->
       <!-- <h2 class="subtitle has-text-centered">
         video
       </h2> -->
-    </div>
+    <!-- </div>
   </div>
-</section>
+</section> -->
 <!-- End teaser video -->
 
 <!-- Paper abstract -->
@@ -156,7 +156,7 @@
   <div class="container is-max-desktop" style="margin-top: -2em; margin-bottom:-1em">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h5 class="title is-4">HANDLOOM 3.0 Framework</h5>
+        <h5 class="title is-4">BIT Framework</h5>
       </div>
     </div>
     <img src="static/images/pipeline.png" alt="Methods Pipeline">
